**************************************
*** Squirrelmail Stable Series 1.2 ***
**************************************

Version 1.2.3 -- ??
-------------------
  - Fixed 'sticky priority' so that replies are set to the same
    priority as the original message.
  - Fixed Printer Friendly to print HTML messages.
  - Disabled prefs caching under PHP 4.1
  - Added "Search Memory". Enabling to store up to
    9 predefined searchs.
  - Increased security in html message.

Version 1.2.2 -- 1 January 2002
-------------------------------

  - Fixed an infinite loop in printer friendly when wrapping option 
    is not in the prefs. 
    Bug reported by Boris Manojlovic <steki@verat.net>  
  - Html cleanup, with patch from Dave Huang (#496712)
  - Fixed a problem saving prefs when using PHP 4.1
  - Russian, Thai, Swedish, Dutch and French update.
  - Changed configure invocation from bash to sh. (Bug #496752)
  - Changed conf.pl invocation from '#!/usr/bin/perl' to
    '#!/usr/bin/env perl' to help people who have perl somewhere
    else. (Bug #496753)
  - Fixed sorting of folder list, bug #497181
  - Fixed wrong behavior of non-javascript select all, bug #496681
  - Added "Show Pages" link to message list showing all messages
    (the resultant page of clicking "Show All")
  - i18n Fix. Because of different configurations in the gettext system,
    some installations could not manage correctly SM languages other than
    English. This has been corrected.
  - Miscellaneous rewrites and improvements.
  - Moved locale files into the ISO-conformant directories.
  - Moved help files into the ISO-conformant directories.
  - Moved compilepo and mergepo files from locale/ into po/
  - Slight i18n fixes and rewrites to accommodate for moved files.
  - Fixes for entities in the subject when replying.
  - Fixes for entities in the To: header. (Bug #489365)
  - Fix for incorrect javascript prefs handling (Bug #497688)